# skillgraph

./: .env.template  .gitignore  README.md  app.py  main.py  pyproject.toml
prompts/: generate_prerequisites.md  generate_question.md  system.md
skillgraph/: config.py
skillgraph/assessment/: __init__.py  question.py
skillgraph/graph/: __init__.py  graph.py  types.py
skillgraph/llm/: __init__.py  anthropic.py  base.py  types.py
skillgraph/utils/: __init__.py  parse.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.js
